--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -129,11 +129,19 @@
                 <td>the Bird</td>
             </tr>
 
-            <tr>
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/{{ videUrl }}"> </iframe>
-            </tr>
 
         </tbody>
     </table>
+
+    <!-- insertar video forma 1 -->
+    <div class="container video-html" [innerHtml]="iframe_html">
+
+    </div>
+    <!--- insertar video forma 2 -->
+    <div class="container"> frameborder="0" allowfullscreen="">
+        <iframe width="560" height="315" [src]="srcURL" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+
 
 </div>
